Fix java example tests